--- a/web/WEB-INF/student/headerfragment.jspf
+++ b/web/WEB-INF/student/headerfragment.jspf
@@ -1,3 +1,10 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<h2>Hello World!</h2>
+
+<div><!-- Nav Bar -->
+    <div><a href="">Home</a></div>
+    <div><a href="">Schedule</a></div>
+    <div><a href="">Grades</a></div>
+    <div><a href="">Courses</a></div>
+    <div>Student Icon / Name</div>
+</div>
