--- a/web/style.css
+++ b/web/style.css
@@ -22,3 +22,40 @@ and open the template in the editor.
     text-decoration: none;
 }
 
+a span {
+    position: absolute;
+    left: 55%;
+    margin-top: -1em;
+    margin-left: -50%;
+    width: 100%;
+    height: 2em;
+    color: white;
+}​
+
+#modules a span{
+    
+    position: absolute;
+    left: 75%;
+    margin-top: -5em;
+    margin-left: -50%;
+    width: 100%;
+    height: 2em;
+    color: white;
+}
+
+#assignments a span{
+    
+    position: absolute;
+    left: 75%;
+    margin-top: -1em;
+    margin-left: -50%;
+    width: 100%;
+    height: 2em;
+    color: white;
+}
+
+a {
+    position: relative;
+    display: inline-block;
+    
+}
