integrating conor's branch

--- a/web/WEB-INF/student/footerfragment.jspf
+++ b/web/WEB-INF/student/footerfragment.jspf
@@ -1,14 +1,10 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-
 <div class="container-fluid" style="background-color: #e2e6ea;height: 100px">
-
-
-
 </div>
+<div class="row" style="height: 150px"></div>
 <div class="row ">
     <div class="col-4">
-
     </div>
     <div class="col-4 bg-white rounded align-self-center align-content-center">
         <table class="table table-borderless align-content-center" style="">
@@ -17,7 +13,7 @@
                     <a href="#">Link</a>
                 </td>
                 <td>
-                    <a href="#">Link</a>               
+                    <a href="#">Link</a>
                 </td>
                 <td>
                     <a href="#">Link</a>
@@ -31,7 +27,7 @@
                     <a href="#">Link</a>
                 </td>
                 <td>
-                    <a href="#">Link</a>               
+                    <a href="#">Link</a>
                 </td>
                 <td>
                     <a href="#">Link</a>
@@ -40,10 +36,8 @@
                     <a href="#">Link</a>
                 </td>
             </tr>
-            
         </table>
     </div>
     <div class="col-4">
-
     </div>
 </div>
