--- a/web/WEB-INF/student/headerfragment.jspf
+++ b/web/WEB-INF/student/headerfragment.jspf
@@ -2,11 +2,9 @@
 <%@ page pageEncoding="UTF-8" %>
 <nav class="navbar navbar-expand-m navbar-light bg-white p-0" >
   <div class="container-fluid">
-    <a href="#" class="navbar-brand">MGT</a>
+      <a href="#" class="navbar-brand text-info"><img src="MGTLOGO.png" height="25px" alt="MGTLOGO"/> MGT</a>
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" aria-current="page" href="#">${sessionScope.username}Student Name</a>
-      
-      
+      <a class="nav-item nav-link active text-primary" aria-current="page" href="#">${sessionScope.studentname}</a>
     </div>
   </div>
 </nav>
@@ -20,8 +18,6 @@
       </div>
       <div class="navbar-nav">
       <a class="nav-item nav-link active" aria-current="page" href="SiteNavigation?logout=true">Log Out?</a>
-      
-      
     </div>
   </div>
 </nav>
