Added updated cards with link functionality - not that good looking but good enough added imgs for future use, fixed naming conventions for links with navigation and header / other jsp's

--- a/web/WEB-INF/student/headerfragment.jspf
+++ b/web/WEB-INF/student/headerfragment.jspf
@@ -12,7 +12,7 @@
   <div class="container-fluid pr-5">
       <div class="align-self-left" id="navbottomlinks">
       <a href="SiteNavigation?nav=home" class="navbar-item">Home</a>
-      <a href="SiteNavigation?nav=course" class="navbar-item">Courses</a>
+      <a href="SiteNavigation?nav=courses" class="navbar-item">Courses</a>
       <a href="SiteNavigation?nav=reportcard" class="navbar-item">Grades</a>
       <a href="SiteNavigation?nav=schedule" class="navbar-item">Schedule</a>
       </div>
