--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8331,8 +8331,8 @@ textarea.form-control {
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #fbceb5 !important;
-    border: 1px solid #fbceb5 !important;
+    background: #28A745 !important;
+    border: 1px solid #fff !important;
     color: #000 !important; }
     .btn.btn-primary:hover {
       border: 1px solid #fbceb5;
