--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -1,100 +1,125 @@
 <%-- Author: Conor Welch --%>
 <%@ page pageEncoding="UTF-8" %>
-<!--Page Navigation-->
 <div class="row">
     <div class="col-sm-2 ms-0 border border-light border-top-0" id="control-bar">
-        <div id="cbbutton1" class="row p-3 border border-light border-top-0">
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
-                    User Management
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Student</a></li>
-                    <li><a class="dropdown-item" href="#">Faculty</a></li>
-                    <li><a class="dropdown-item" href="#">Admin</a></li>
-                </ul>
+
+        <!--Option Area 1-->
+        <div class="row p-3 border border-light border-top-0" id="cbbutton1">
+
+            <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse1" data-bs-toggle="collapse"
+                    type="button">
+                User Management
+            </button>
+
+            <div class="collapse" id="opcollapse1">
+
+                <a class="dropdown-item" href="#">Student</a>
+                <a class="dropdown-item" href="#">Faculty</a>
+                <a class="dropdown-item" href="#">Admin</a>
+                <a class="dropdown-item" href="#">Create New User</a>
+            </div>
+
+        </div>
+
+        <!--Option Area 2-->
+        <div class="row p-3 border border-light " id="cbbutton2">
+
+            <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse2" data-bs-toggle="collapse"
+                    type="button">
+                Assignments
+            </button>
+
+            <div class="collapse" id="opcollapse2">
+
+                <a class="dropdown-item" href="#">Create New Assignment</a>
+                <a class="dropdown-item" href="#">Edit Assignment</a>
+                <a class="dropdown-item" href="#">Assign Faculty</a>
+                <a class="dropdown-item" href="#">Remove Assignment</a>
+            </div>
+
+        </div>
+
+        <!--Option Area 3-->
+        <div class="row p-3 border border-light " id="cbbutton3">
+
+
+            <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse3" data-bs-toggle="collapse"
+                    type="button">
+                Module
+            </button>
+            <div class="collapse" id="opcollapse3">
+                <a class="dropdown-item" href="#">Create New Module</a>
+                <a class="dropdown-item" href="#">Edit Module</a>
+                <a class="dropdown-item" href="#">Remove Module</a>
+
             </div>
         </div>
-        <div id="cbbutton2" class="row p-3 border border-light">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
-                    Assignment
-                </button>
-                <ul class="dropdown-menu ">
-                    <li><a class="dropdown-item" href="#">1</a></li>
-                    <li><a class="dropdown-item" href="#">2</a></li>
-                    <li><a class="dropdown-item" href="#">3</a></li>
-                </ul>
+
+        <!--Option Area 4-->
+        <div class="row p-3 border border-light " id="cbbutton4">
+
+
+            <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse4" data-bs-toggle="collapse" type="button">
+                Course
+            </button>
+            <div class="collapse" id="opcollapse4">
+
+                <a class="dropdown-item" href="#">Create Course</a>
+                <a class="dropdown-item" href="#">Edit Course</a>
+                <a class="dropdown-item" href="#">Remove Course</a>
+
             </div>
         </div>
-        <div id="cbbutton3" class="row p-3 border border-light ">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
-                    Module
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">1</a></li>
-                    <li><a class="dropdown-item" href="#">2</a></li>
-                    <li><a class="dropdown-item" href="#">3</a></li>
-                </ul>
+        <!--Option Area 51-->
+        <div class="row p-3 border border-light " id="cbbutton5">
+
+
+            <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse5" data-bs-toggle="collapse" type="button">
+                Cohort
+            </button>
+            <div class="collapse" id="opcollapse5">
+
+                <a class="dropdown-item" href="#">Create Cohort</a>
+                <a class="dropdown-item" href="#">Edit Cohort</a>
+                <a class="dropdown-item" href="#">Archive Cohort</a>
+
             </div>
         </div>
-        <div id="cbbutton4" class="row p-3 border border-light ">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
-                    Course
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">1</a></li>
-                    <li><a class="dropdown-item" href="#">2</a></li>
-                    <li><a class="dropdown-item" href="#">3</a></li>
-                </ul>
-            </div>
-        </div>
-        <div id="cbbutton5" class="row p-3 border border-light pe-5">
+        <!--Option Area 6-->
+        <div class="row p-3 border border-light " id="cbbutton6">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
-                    Cohort
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">1</a></li>
-                    <li><a class="dropdown-item" href="#">2</a></li>
-                    <li><a class="dropdown-item" href="#">3</a></li>
-                </ul>
-            </div>
-        </div>
-        <div id="cbbutton6" class="row p-3 border border-light ">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
+                <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse6" data-bs-toggle="collapse" type="button">
                     Announcement
                 </button>
-                <ul class="dropdown-menu me-5">
-                    <li><a class="dropdown-item" href="#">1</a></li>
-                    <li><a class="dropdown-item" href="#">2</a></li>
-                    <li><a class="dropdown-item" href="#">3</a></li>
-                </ul>
+            <div class="collapse" id="opcollapse6">
+                <a class="dropdown-item" href="#">Create New Announcement</a>
+                <a class="dropdown-item" href="#">Edit Announcement</a>
+                <!-- Leaving this here just incase <li><a class="dropdown-item" href="#"></a></li>-->
+
             </div>
         </div>
-        <div id="cbbutton7" class="row p-3 border border-light pe-5">
+        <!--Option Area 7-->
+        <div class="row p-3 border border-light pe-5" id="cbbutton7">
 
-            <div class="dropdown">
-                <button type="button" class="btn dropdown-toggle ms-0 ps-0 pe-5" data-bs-toggle="dropdown">
+
+                <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse7" data-bs-toggle="collapse" type="button">
                     Administration
                 </button>
-                <ul class="dropdown-menu me-5">
-                    <li><a class="dropdown-item" href="#">Reports</a></li>
-                    <li><a class="dropdown-item" href="#">Archive</a></li>
-                    <li><a class="dropdown-item" href="#">Backup and Recovery</a></li>
-                </ul>
+            <div class="collapse" id="opcollapse7">
+                    <a class="dropdown-item" href="#">Reports</a>
+                    <a class="dropdown-item" href="#">Archive</a>
+                    <a class="dropdown-item" href="#">Backup and Recovery</a>
+
             </div>
         </div>
-        <div id="cbbutton8" class="row p-3 border border-light pe-5 border-bottom-0">
-           <a href="#"></a>
+        <!--Holder at bottom of fragment-->
+        <div class="row p-3 border border-light pe-5 border-bottom-0" id="cbbutton8">
+
         </div>
 
     </div>
+    <!--End of Fragment-->
