--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -1,10 +1,12 @@
 <%-- Author: Conor Welch --%>
 <%@ page pageEncoding="UTF-8" %>
-<div class="row">
-    <div class="col-sm-2 ms-0 border border-light border-top-0" id="control-bar">
+<!--SideBar Fragment-->
+<!--Page Navigation-->
+
+    <div class="col-sm-2 ms-0 border-end border-secondary" id="control-bar">
 
         <!--Option Area 1-->
-        <div class="row p-3 border border-light border-top-0" id="cbbutton1">
+        <div class="row p-3 border-bottom  border-white"  id="cbbutton1">
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse1" data-bs-toggle="collapse"
                     type="button">
@@ -22,7 +24,7 @@
         </div>
 
         <!--Option Area 2-->
-        <div class="row p-3 border border-light " id="cbbutton2">
+        <div class="row p-3 border-bottom  border-white" id="cbbutton2" >
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse2" data-bs-toggle="collapse"
                     type="button">
@@ -40,7 +42,7 @@
         </div>
 
         <!--Option Area 3-->
-        <div class="row p-3 border border-light " id="cbbutton3">
+        <div class="row p-3 border-bottom  border-white " id="cbbutton3">
 
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse3" data-bs-toggle="collapse"
@@ -57,7 +59,7 @@
 
 
         <!--Option Area 4-->
-        <div class="row p-3 border border-light " id="cbbutton4">
+        <div class="row p-3 border-bottom  border-white" id="cbbutton4">
 
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse4" data-bs-toggle="collapse" type="button">
@@ -73,7 +75,7 @@
         </div>
 
         <!--Option Area 51-->
-        <div class="row p-3 border border-light " id="cbbutton5">
+        <div class="row p-3 border-bottom border-white" id="cbbutton5">
 
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse5" data-bs-toggle="collapse" type="button">
@@ -89,7 +91,7 @@
         </div>
 
         <!--Option Area 6-->
-        <div class="row p-3 border border-light " id="cbbutton6">
+        <div class="row p-3 border-bottom border-white " id="cbbutton6">
 
 
                 <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse6" data-bs-toggle="collapse" type="button">
@@ -103,7 +105,7 @@
             </div>
         </div>
         <!--Option Area 7-->
-        <div class="row p-3 border border-light pe-5" id="cbbutton7">
+        <div class="row p-3 border-bottom border-white" id="cbbutton7">
 
 
                 <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse7" data-bs-toggle="collapse" type="button">
@@ -117,7 +119,7 @@
             </div>
         </div>
         <!--Holder at bottom of fragment-->
-        <div class="row p-3 border border-light pe-5 border-bottom-0" id="cbbutton8">
+        <div class="row p-3 " id="cbbutton8">
 
         </div>
 
