--- a/web/adminstyle.css
+++ b/web/adminstyle.css
@@ -1,79 +1,111 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
+
 /* 
     Created on : Mar. 10, 2022, 12:39:26 p.m.
     Author     : Conor Welch
 */
 
-body{
-color: #9c9c9c;
-}
+/*Universal Elements*/
+
 #adminnavbottom{
     background-color: #082047;
 }
 #adminnavtop{
-    background-color: whitesmoke;
+    background-color: ghostwhite;
 
     color: #9c9c9c;
-    font-weight: normal;
+    font-weight: bold;
 }
 #adminview{
     text-decoration: none;
     color: #082047;
 }
-#control-bar{
-    background-color: #9c9c9c;
+#control-bar {
+    background-color: #E2E6EA;
     height: 100%;
     font-weight: bold;
     text-align: left;
     align-content: flex-start;
-}
 
-#cbbutton1 {
-    background-color: #9c9c9c;
 
 }
+
 #control-bar button{
     color: #082047;
     text-align: left;
-}
-#control-bar {
-    background-color: #9c9c9c;
-    color: whitesmoke;
-    border:none;
-    cursor: pointer;
-}
-#cbbutton2 {
-    background-color: #9c9c9c;
-}
-#cbbutton3 {
-    background-color: #9c9c9c;
-}
-#cbbutton4 {
-    background-color: #9c9c9c;
-}
-#cbbutton5 {
-    background-color: #9c9c9c;
-}
-#cbbutton6 {
-    background-color: #9c9c9c;
-}
-#cbbutton7 {
-    background-color: #9c9c9c;
-}
-#cbbutton8 {
-    background-color: #9c9c9c;
-    height:125px;
-}
-#contentpage {
-    background-color: #c3c3c3;
 
 }
-#contentcontainer{
-    height: 530px;
-    background-color: whitesmoke;
-    box-shadow: 1px 1px 1px #787878;
+/*Possibly Deprecated*/
+#cbbutton1 {}
+#cbbutton2 {}
+#cbbutton3 {}
+#cbbutton4 {}
+#cbbutton5 {}
+#cbbutton6 {}
+#cbbutton7 {}
+#cbbutton8 {
+    height:125px;
 }
+
+#contentpage {
+    background-color:white;
+    font-family: 'Roboto', sans-serif;
+    color: #082047;
+}
+#contentcontainer{
+    height: 570px;
+    background: #E2E6EA;
+    box-shadow: 1px 1px 1px #c5c9cd;
+    border-radius: 3px;
+    border-style: wave;
+}
+#contentcontainerann{
+    height: 550px;
+    background: #E2E6EA;
+    box-shadow: 1px 1px 1px #c5c9cd;
+    border-radius: 3px;
+    border-style: wave;
+}
+#contentheader{
+    color: #082047;
+}
+
+#but1,#but2,#but3,#but4,#but5{
+    font-weight: bolder;
+    color: #082047;
+}
+
+#but6{
+    font-weight: bolder;
+    color: red;
+
+}
+#contentheaderrow{
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-bottom-color: #082047;
+}
+
+
+#select1{
+    height:450px;
+
+}
+#infoblock{
+    width: 97%;
+    border-style: none;
+    background: inherit;
+
+}
+
+#typedynamic{
+    font-weight: bold;
+}
+
+#info1,#info2,#info3,#info4, #info5, #info6 {
+
+}
+#label1,#label2,#label3,#label4,#label5,#label6{
+
+}
+/*Announcement Specifics*/
+
