--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -15,10 +15,10 @@
 
             <div class="collapse" id="opcollapse1">
 
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=users">Student</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=users">Faculty</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=users">Admin</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=users">Create New User</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Student</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Faculty</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Admin</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Create New User</a>
             </div>
 
         </div>
@@ -33,10 +33,10 @@
 
             <div class="collapse" id="opcollapse2">
 
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=assignments">Create New Assignment</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=assignments">Edit Assignment</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=assignments">Assign Faculty</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=assignments">Remove Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Create New Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Edit Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Assign Faculty</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Remove Assignment</a>
             </div>
 
         </div>
@@ -50,9 +50,9 @@
                 Module
             </button>
             <div class="collapse" id="opcollapse3">
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=modules">Create New Module</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=modules">Edit Module</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=modules">Remove Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Create New Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Edit Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Remove Module</a>
 
             </div>
         </div>
@@ -67,9 +67,9 @@
             </button>
             <div class="collapse" id="opcollapse4">
 
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=courses">Create Course</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=courses">Edit Course</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=courses">Remove Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Create Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Edit Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Remove Course</a>
 
             </div>
         </div>
@@ -83,9 +83,9 @@
             </button>
             <div class="collapse" id="opcollapse5">
 
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=cohort">Create Cohort</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=cohort">Edit Cohort</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=cohort">Archive Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Create Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Edit Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Archive Cohort</a>
 
             </div>
         </div>
@@ -98,8 +98,8 @@
                     Announcement
                 </button>
             <div class="collapse" id="opcollapse6">
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=announcements">Create New Announcement</a>
-                <a class="dropdown-item" href="AdminSiteNavigation?nav=announcements">Edit Announcement</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements">Create New Announcement</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements">Edit Announcement</a>
                 <!-- Leaving this here just incase <li><a class="dropdown-item" href="#"></a></li>-->
 
             </div>
@@ -112,9 +112,9 @@
                     Administration
                 </button>
             <div class="collapse" id="opcollapse7">
-                    <a class="dropdown-item" href="AdminSiteNavigation?nav=adminreport">Reports</a>
-                    <a class="dropdown-item" href="AdminSiteNavigation?nav=adminarchive">Archive</a>
-                    <a class="dropdown-item" href="AdminSiteNavigation?nav=adminbr">Backup and Recovery</a>
+                    <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminreport">Reports</a>
+                    <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminarchive">Archive</a>
+                    <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminbr">Backup and Recovery</a>
 
             </div>
         </div>
