--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -1,8 +1,12 @@
 <%-- Author: Conor Welch --%>
 <%@ page pageEncoding="UTF-8" %>
-<!--SideBar Fragment-->
-<!--Page Navigation-->
-
+<!--SideBar Fragment/Page Navigation-->
+<!-- comment -->
+<!-- comment -->
+<!-- comment -->
+<!--example: SiteNavigationAdmin?nav=users&op=1-->
+<!-- nav is the value for navigation logic to page -->
+<!-- op is the value for the dynamic option ordered 1-n(hyperlinks) for each option area -->
     <div class="col-sm-2 ms-0 border-end border-secondary" id="control-bar">
 
         <!--Option Area 1-->
@@ -15,10 +19,10 @@
 
             <div class="collapse" id="opcollapse1">
 
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Student</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Faculty</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Admin</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users">Create New User</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users&op=1">Student</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users&op=2">Faculty</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users&op=3">Admin</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=users&op=4">Create New User</a>
             </div>
 
         </div>
@@ -33,10 +37,10 @@
 
             <div class="collapse" id="opcollapse2">
 
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Create New Assignment</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Edit Assignment</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Assign Faculty</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments">Remove Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments&op=1">Create New Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments&op=2">Edit Assignment</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments&op=3">Assign Faculty</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=assignments&op=4">Remove Assignment</a>
             </div>
 
         </div>
@@ -50,9 +54,9 @@
                 Module
             </button>
             <div class="collapse" id="opcollapse3">
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Create New Module</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Edit Module</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules">Remove Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules&op=1">Create New Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules&op=2">Edit Module</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules&op=3">Remove Module</a>
 
             </div>
         </div>
@@ -67,9 +71,9 @@
             </button>
             <div class="collapse" id="opcollapse4">
 
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Create Course</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Edit Course</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses">Remove Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses&op=1">Create Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses&op=2">Edit Course</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=courses&op=3">Remove Course</a>
 
             </div>
         </div>
@@ -83,9 +87,9 @@
             </button>
             <div class="collapse" id="opcollapse5">
 
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Create Cohort</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Edit Cohort</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort">Archive Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort&op=1">Create Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort&op=2">Edit Cohort</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=cohort&op=3">Archive Cohort</a>
 
             </div>
         </div>
@@ -98,8 +102,8 @@
                     Announcement
                 </button>
             <div class="collapse" id="opcollapse6">
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements">Create New Announcement</a>
-                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements">Edit Announcement</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements&op=1">Create New Announcement</a>
+                <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements&op=2">Edit Announcement</a>
                 <!-- Leaving this here just incase <li><a class="dropdown-item" href="#"></a></li>-->
 
             </div>
