--- a/web/WEB-INF/faculty/fac_headerfragment.jspf
+++ b/web/WEB-INF/faculty/fac_headerfragment.jspf
@@ -1,13 +1,16 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<nav class="navbar navbar-expand-m navbar-light bg-white p-0 " id="navtop">
-  <div class="container-fluid">
-      <a href="#" class="navbar-brand text-info p-0 mb-0 d-inline"><img src="MGTLOGO.png" height="25px" alt="MGTLOGO"/> MGT</a>
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active text-primary mb-0 d-inline" aria-current="page" href="#">${sessionScope.faculty.getFullName()}</a><p></p>
+
+    <nav class="navbar navbar-expand-m navbar-light bg-white p-0 me-0" id="navtop">
+    <div class="container-fluid">
+        <a class="navbar-brand text-black" href="#" id="mgtlogo"><img alt="MGTLOGO" height="25px" src="MGTLOGO.png"/>
+            MGT</a>
+        <div class="navbar-nav">
+            <a aria-current="page" class="nav-item nav-link active " href="#" id="facultyname">${sessionScope.faculty.getFullName()}</a>
+        </div>
     </div>
-  </div>
 </nav>
+
 <nav class="navbar navbar-dark p-0 mb-5" id="navbottom">
   <div class="container-fluid pr-5">
       <div class="align-self-left" id="navbottomlinks">
