--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -47,7 +47,7 @@
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse2" data-bs-toggle="collapse"
                     type="button">
-                Assignments
+                Assignment Management
             </button>
 
             <div class="collapse" id="opcollapse2">
@@ -65,7 +65,7 @@
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse3" data-bs-toggle="collapse"
                     type="button">
-                Module
+                Module Management
             </button>
             <div class="collapse" id="opcollapse3">
                 <a class="dropdown-item" href="SiteNavigationAdmin?nav=modules&op=1">Create New Module</a>
@@ -81,7 +81,7 @@
 
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse4" data-bs-toggle="collapse" type="button">
-                Course
+                Course Management
             </button>
             <div class="collapse" id="opcollapse4">
 
@@ -97,7 +97,7 @@
 
 
             <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse5" data-bs-toggle="collapse" type="button">
-                Cohort
+                Cohort Management
             </button>
             <div class="collapse" id="opcollapse5">
 
@@ -113,7 +113,7 @@
 
 
                 <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse6" data-bs-toggle="collapse" type="button">
-                    Announcement
+                    Announcement Management
                 </button>
             <div class="collapse" id="opcollapse6">
                 <a class="dropdown-item" href="SiteNavigationAdmin?nav=announcements&op=1">Create New Announcement</a>
@@ -127,7 +127,7 @@
 
 
                 <button class="btn  ms-0 ps-0 pe-5" data-bs-target="#opcollapse7" data-bs-toggle="collapse" type="button">
-                    Administration
+                    Administrator Options
                 </button>
             <div class="collapse" id="opcollapse7">
                     <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminreport">Reports</a>
