--- a/web/WEB-INF/faculty/fac_headerfragment.jspf
+++ b/web/WEB-INF/faculty/fac_headerfragment.jspf
@@ -6,7 +6,7 @@
         <a class="navbar-brand text-black" href="#" id="mgtlogo"><img alt="MGTLOGO" height="25px" src="MGTLOGO.png"/>
             MGT</a>
         <div class="navbar-nav">
-            <a aria-current="page" class="nav-item nav-link active " href="#" id="facultyname">${sessionScope.faculty.getFullName()}</a>
+            <a aria-current="page" class="nav-item nav-link active " href="#" id="facultyname">${sessionScope.faculty.getDisplayName()}</a>
         </div>
     </div>
 </nav>
