Made the button Accessible
Borders were never added, it made sense to add them to make it more U/X friendly.

Thank you Conor for letting me consult on the design decision.

Co-Authored-By: Conor-Welch <91223824+Conor-Welch@users.noreply.github.com>

--- a/web/adminstyle.css
+++ b/web/adminstyle.css
@@ -69,13 +69,16 @@
     color: #082047;
 }
 
-#but1,#but2,#but3,#but4,#but5{
+#but1,#but2,#but3,#but4,#but5, #but6{
     font-weight: bolder;
+    border: 1px solid black;
+    
+    margin: 15px;
+  text-align: center;
     color: #082047;
 }
 
 #but6{
-    font-weight: bolder;
     color: red;
 
 }
