--- a/web/WEB-INF/student/headerfragment.jspf
+++ b/web/WEB-INF/student/headerfragment.jspf
@@ -11,12 +11,12 @@
 <nav class="navbar navbar-dark p-0 mb-5" id="navbottom">
   <div class="container-fluid pr-5">
       <div class="align-self-left" id="navbottomlinks">
-      <a href="SiteNavigation?nav=home" class="navbar-item">Home</a>
-      <a href="SiteNavigation?nav=reportcard" class="navbar-item">Grades</a>
-      <a href="SiteNavigation?nav=schedule" class="navbar-item">Schedule</a>
+      <a href="SiteNavigation?nav=home" class="navbar-item mx-3">Home</a>
+      <a href="SiteNavigation?nav=reportcard" class="navbar-item mx-3">Grades</a>
+      <a href="SiteNavigation?nav=schedule" class="navbar-item mx-3">Schedule</a>
       </div>
       <div class="navbar-nav">
-      <a class="nav-item nav-link active" aria-current="page" href="SiteNavigation?logout=true">Log Out?</a>
+      <a class="nav-item nav-link active" aria-current="page" href="SiteNavigation?logout=true">Log Out</a>
     </div>
   </div>
 </nav>
