--- a/web/WEB-INF/faculty/fac_headerfragment.jspf
+++ b/web/WEB-INF/faculty/fac_headerfragment.jspf
@@ -6,7 +6,7 @@
         <a class="navbar-brand text-black" href="#" id="mgtlogo"><img alt="MGTLOGO" height="25px" src="MGTLOGO.png"/>
             MGT</a>
         <div class="navbar-nav">
-            <a aria-current="page" class="nav-item nav-link active " href="#" id="facultyname">${sessionScope.faculty.getDisplayName()}</a>
+            <a aria-current="page" class="nav-item nav-link active text-capitalize" href="#" id="facultyname">${sessionScope.faculty.getFullName()}</a>
         </div>
     </div>
 </nav>
@@ -17,7 +17,7 @@
       <a href="SiteNavigationFaculty?nav=" class="navbar-item">Home</a>
       <a href="SiteNavigationFaculty?nav=grades" class="navbar-item">Grades</a>
       <a href="SiteNavigationFaculty?nav=attendance" class="navbar-item">Attendance</a>
-      <a href="SiteNavigationFaculty?nav=schedule" class="navbar-item">Schedule</a>
+      <a href="SiteNavigationFaculty?nav=schedule" class="navbar-item" disabled="true">Schedule</a>
       </div>
       <div class="navbar-nav">
       <a class="nav-item nav-link active" aria-current="page" href="SiteNavigationFaculty?logout=true">Log Out?</a>
