--- a/web/adminstyle.css
+++ b/web/adminstyle.css
@@ -70,7 +70,7 @@
 }
 
 #but1,#but2,#but3,#but4,#but5, #but6{
-    font-weight: bolder;
+    font-weight: bold;
     
     background-color: whitesmoke;
     margin: 15px;
