--- a/web/WEB-INF/admin/AdminSideBarFragment.jspf
+++ b/web/WEB-INF/admin/AdminSideBarFragment.jspf
@@ -131,9 +131,10 @@
                 </button>
             <div class="collapse" id="opcollapse7">
                     <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminreport">Reports</a>
+                    <!-- comment 
                     <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminarchive">Archive</a>
                     <a class="dropdown-item" href="SiteNavigationAdmin?nav=adminbr">Backup and Recovery</a>
-
+                    -->
             </div>
         </div>
         <!--Holder at bottom of fragment-->
